# django-mono-repo

./: pyproject.toml
.github/workflows/: ci.yml
project1/: manage.py
project1/service1/: asgi.py  settings.py  views.py  wsgi.py
project2/: manage.py
project2/service2/: asgi.py  settings.py  urls.py  views.py  wsgi.py
shared/: setup.py  utils.py
shared/shared.egg-info/: PKG-INFO  SOURCES.txt
